<resources>
    <string name="app_name">지시</string>
    <string name="signIn">회원가입</string>
    <string name="logIn">로그인</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="PhNumForLogIn">전화번호로 로그인</string>
    <string name="ourRegion">우리지역</string>
    <string name="market">시장</string>
    <string name="Jisi">Jisi</string>
    <string name="google">Google</string>
    <string name="apple">Apple</string>
    <string name="phnumlogin">전화번호 로그인</string>
    <string name="phnumloginbelow">전화번호를 통하여 로그인 합니다</string>
    <string name="go">진행하기</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>